testdata/baselines/reference/submodule/conformance/importBindingDefer2.errors.txt
b.ts(1,8): error TS18059: Named imports are not allowed in a deferred import.


==== a.ts (0 errors) ====
    export default 2;
    
==== b.ts (1 errors) ====
    import defer, {} from "./a.js";
           ~~~~~~~~~
!!! error TS18059: Named imports are not allowed in a deferred import.
    